fixed lines position on small screens

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -135,6 +135,10 @@ h2:not(:has(+ .subtitle)) {
   margin-bottom: 0.5rem;
 }
 
+.mb-4 {
+  margin-bottom: 2rem;
+}
+
 
 /* Lines animation */
 .line-container {
